tests/gen-test/test_out/swap-macro-parse-out.txt
error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
 --> swap-macro\root.ctl:1:983
  |
1 | use { "water/option" ; "water/macros/tokens" ; } ; struct LastToken { last : MacroToken ; } ; struct TwoTokens { second : MacroToken ; first : MacroToken ; } ; enum Swap { Two : TwoTokens ; Last : LastToken ; Empty ; } ; fn "default" malloc(size : uint) -> ^ () extern ; fn "default" free(ptr : ^ ()) extern ; fn "default" putchar(c : char) -> u32 extern ; impl TokenMacro for Swap {     fn new() -> ^ Self => cast(malloc(sizeof\[Self] ())) ; fn     start(s : ^ Self, lexer : MacroLexer) -> bool     {         * s =\Two ~\{ first : lexer.next() ; second : lexer.next() ; } ;         true     } ; fn next(s : ^ Self, lexer : MacroLexer) -> Option [MacroToken]     {         Option\Some ~ match * s         {            \Two ~\{ first, second }             { * s =\Last ~\{ last : first } ; second } ;\Last ~\            { last } { * s =\Empty ; last } ;\Empty => return\None ;         }     } ; fn clear(s : ^ Self) {} ; fn drop(s : ^ Self) => free(cast(s)) ; } ; break ; #[entry] ; swap! swap! fn -> main uint => 0 ;
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^^^^^ token located here
  |
  = info: list -> item

